@@ -34,6 +34,7 @@
    ncpdq -O -D 3 -P all_new ~/nco/data/in.nc ~/foo.nc
    ncpdq -O -D 3 -P all_xst ~/nco/data/in.nc ~/foo.nc
    ncpdq -O -D 3 -P xst_new ~/nco/data/in.nc ~/foo.nc
+   ncpdq -O -D 3 -M dbl_flt ~/nco/data/in.nc ~/foo.nc
    ncpdq -O -D 3 -P upk ~/nco/data/in.nc ~/foo.nc
    ncpdq -O -D 3 -a lon,lat -g g21,g22 ~/nco/data/in_grp_3.nc ~/foo.nc
    ncpdq -O -D 3 -g g1 -v v1 --union -G dude -p ~/nco/data in_grp.nc ~/foo.nc */
@@ -931,13 +932,13 @@ main(int argc,char **argv)
         /* nco_var_dfn() pre-defined dummy packing attributes in output file only for "packable" input variables */
         if(nco_pck_plc_typ_get(nco_pck_map,var_prc[idx]->typ_upk,(nc_type *)NULL)){
           /* Verify input variable was newly packed by this operator
-            Writing pre-existing (non-re-packed) attributes here would fail because
-            nco_pck_dsk_inq() never fills in var->scl_fct.vp and var->add_fst.vp
-            Logic is same as in nco_var_dfn() (except var_prc[] instead of var[])
-            If operator newly packed this particular variable... */
+	     Writing pre-existing (non-re-packed) attributes here would fail because
+	     nco_pck_dsk_inq() never fills in var->scl_fct.vp and var->add_fst.vp
+	     Logic is same as in nco_var_dfn() (except var_prc[] instead of var[])
+	     If operator newly packed this particular variable... */
           if(
             /* ...either because operator newly packs all variables... */
-            (nco_pck_plc == nco_pck_plc_all_new_att) ||
+            (nco_pck_plc == nco_pck_plc_all_new_att && nco_pck_map != nco_pck_map_dbl_flt) ||
             /* ...or because operator newly packs un-packed variables like this one... */
             (nco_pck_plc == nco_pck_plc_all_xst_att && !var_prc[idx]->pck_ram) ||
             /* ...or because operator re-packs packed variables like this one... */
